--- a/src/Oro/Bundle/IssuesBundle/Resources/config/oro/routing.yml
+++ b/src/Oro/Bundle/IssuesBundle/Resources/config/oro/routing.yml
@@ -2,3 +2,13 @@ oro_issues_bundle:
     resource:     "@OroIssuesBundle/Controller"
     type:         annotation
     prefix:       /issues
+
+oro_issues_api_issue:
+    resource:     "@OroIssuesBundle/Controller/Api/Rest/IssueController.php"
+    type:         rest
+    prefix:       api/rest/{version}/
+    requirements:
+        version:  latest|v1
+        _format:  json
+    defaults:
+        version:  latest
