--- a/src/Oro/Bundle/IssuesBundle/Resources/config/services.yml
+++ b/src/Oro/Bundle/IssuesBundle/Resources/config/services.yml
@@ -3,7 +3,7 @@ parameters:
     oro_issues.issue.manager.class: Oro\Bundle\IssuesBundle\Entity\Manager\IssuesManager
     oro_issues.issue.form.type.class: Oro\Bundle\IssuesBundle\Form\Type\IssueType
     oro_issues.issue.form.type.api.class: Oro\Bundle\IssuesBundle\Form\Type\IssueApiType
-    oro_issues.issue.form.handler.api.class: Oro\Bundle\IssuesBundle\Form\Type\IssueHandler
+    oro_issues.issue.form.handler.api.class: Oro\Bundle\IssuesBundle\Form\Handler\IssueHandler
 
 services:
     oro_issues.issue.manager:
@@ -27,7 +27,24 @@ services:
         tags:
             - { name: form.type, alias: issue_type_api }
 
+    #Form Instances
+    oro_issues.form.issue:
+        class: Symfony\Component\Form\Form
+        factory_method: createNamed
+        factory_service: form.factory
+        arguments: [oro_issue_form, issue_type]
+
+    oro_issues.form.issue.api:
+        class: Symfony\Component\Form\Form
+        factory_method: createNamed
+        factory_service: form.factory
+        arguments: [oro_issue_form, issue_type_api]
+
+    #Form Handler for API
     oro_issues.form.handler.issue.api:
         class: '%oro_issues.issue.form.handler.api.class%'
-        tags:
-            - { name: form.type, alias: issue_form_handler_api }
+        scope: request
+        arguments:
+            - '@oro_issues.form.issue.api'
+            - '@request'
+            - '@doctrine.orm.entity_manager'
