--- a/src/Oro/Bundle/IssuesBundle/Resources/config/process.yml
+++ b/src/Oro/Bundle/IssuesBundle/Resources/config/process.yml
@@ -2,7 +2,7 @@ definitions:
     update_issue_status:
         label:   Update issue status
         enabled: true
-        order:   100
+        order:   80
         entity:  Oro\Bundle\IssuesBundle\Entity\Issue
         actions_configuration:
             - @find_entity:
@@ -16,12 +16,25 @@ definitions:
     set_issue_reporter:
         label:   Set issue reporter
         enabled: true
-        order:   100
+        order:   90
         entity:  Oro\Bundle\IssuesBundle\Entity\Issue
         pre_conditions:
             @empty: $reporter
         actions_configuration:
             - @assign_active_user: $reporter
+
+    update_issue_collaborators:
+        label: Update issue collaborators when adding notes
+        enabled: true
+        order: 100
+        entity: Oro\Bundle\NoteBundle\Entity\Note
+        actions_configuration:
+            - @call_method:
+                flush: true
+                parameters:
+                    object: $target
+                    method: addCollaborator
+                    method_parameters: [$owner]
 
 triggers:
     update_issue_status:
@@ -37,3 +50,9 @@ triggers:
     set_issue_reporter:
         -
             event: create
+
+    update_issue_collaborators:
+        -
+            event: create
+        -
+            event: update
