--- a/src/Oro/Bundle/IssuesBundle/Resources/config/placeholders.yml
+++ b/src/Oro/Bundle/IssuesBundle/Resources/config/placeholders.yml
@@ -3,7 +3,17 @@ placeholders:
         items:
             issue_buttons:
                 order: 100
+
+    view_content_data_additional_information:
+        items:
+            user_issues_list:
+                order: 100
+
 items:
     issue_buttons:
         template: OroIssuesBundle:Widget:buttons.html.twig
+        applicable: '@oro_ui.placeholder.filter->isInstanceOf($entity$, %oro_user.entity.class%)'
+
+    user_issues_list:
+        template: OroIssuesBundle:Widget:issues.html.twig
         applicable: '@oro_ui.placeholder.filter->isInstanceOf($entity$, %oro_user.entity.class%)'
