--- a/app/phpunit.xml.dist
+++ b/app/phpunit.xml.dist
@@ -21,38 +21,8 @@
         <testsuite name="Issues Functional Tests">
             <directory suffix="Test.php">../src/Oro//Bundle/IssuesBundle/Tests/Functional</directory>
         </testsuite>
-        <testsuite name="Project Test Suite">
-            <directory suffix="Test.php">../src/*/src/*/Component/*/Tests/Unit</directory>
-            <directory suffix="Test.php">../src/*/src/*/Bundle/*Bundle/Tests/Unit</directory>
-            <directory suffix="Test.php">../src/*/src/*/Bundle/*Bundle/Tests/Functional</directory>
-        </testsuite>
-        <testsuite name="Unit Tests">
-            <directory suffix="Test.php">../src/*/src/*/Component/*/Tests/Unit</directory>
-            <directory suffix="Test.php">../src/*/src/*/Bundle/*Bundle/Tests/Unit</directory>
-        </testsuite>
-        <testsuite name="Functional Tests">
-            <directory suffix="Test.php">../src/*/src/*/Bundle/*Bundle/Tests/Functional</directory>
-        </testsuite>
-        <testsuite name="Project OroCRM Unit Tests">
-            <directory suffix="Test.php">../src/OroCRM/src/OroCRM/Bundle/*Bundle/Tests/Unit</directory>
-            <directory suffix="Test.php">../src/OroCRMPackages/src/OroCRM/Bundle/*Bundle/Tests/Unit</directory>
-        </testsuite>
-        <testsuite name="Project OroCRM Functional Tests">
-            <directory suffix="Test.php">../src/OroCRM/src/OroCRM/Bundle/*Bundle/Tests/Functional</directory>
-            <directory suffix="Test.php">../src/OroCRMPackages/src/OroCRM/Bundle/*Bundle/Tests/Functional</directory>
-        </testsuite>
-        <testsuite name="Project Oro Unit Tests">
-            <directory suffix="Test.php">../src/Oro/src/Oro/Component/*/Tests/Unit</directory>
-            <directory suffix="Test.php">../src/Oro/src/Oro/Bundle/*Bundle/Tests/Unit</directory>
-        </testsuite>
-        <testsuite name="Project Oro Functional Tests">
-            <directory suffix="Test.php">../src/Oro/src/Oro/Bundle/*Bundle/Tests/Functional</directory>
-        </testsuite>
-        <testsuite name="Project Selenium Tests">
-            <directory suffix="Test.php">../src/*/src/*/Bundle/*Bundle/Tests/Selenium</directory>
-        </testsuite>
-        <testsuite name="Project Behat Tests">
-            <directory suffix="Test.php">../src/Oro*/src/Oro*/Bundle/*Bundle/Tests/Behat</directory>
+        <testsuite name="Issues Unit Tests">
+            <directory suffix="Test.php">../src/Oro//Bundle/IssuesBundle/Tests/Unit</directory>
         </testsuite>
     </testsuites>
 
