OOT-1275: Fixes after review

--- a/src/Oro/Bundle/IssuesBundle/Resources/config/process.yml
+++ b/src/Oro/Bundle/IssuesBundle/Resources/config/process.yml
@@ -30,6 +30,8 @@ definitions:
         entity: Oro\Bundle\NoteBundle\Entity\Note
         actions_configuration:
             - @call_method:
+                conditions:
+                    - '@instanceof': [$target, Oro\Bundle\IssuesBundle\Entity\Issue]
                 flush: true
                 parameters:
                     object: $target
