--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 /.idea
 /node_modules
 /composer.phar
-composer.lock
+behat.yml
 /build/logs/*
 /vendor
 /cov
@@ -17,6 +17,7 @@ composer.lock
 /app/config/parameters.yml
 /app/config/parameters_test.yml
 /app/build/*
+behat.yml
 *~
 
 /app/SymfonyRequirements.php
