--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -156,3 +156,9 @@ oro_help:
 
 oro_theme:
     active_theme: oro
+
+oro_message_queue:
+    transport:
+        default: '%message_queue_transport%'
+        '%message_queue_transport%': '%message_queue_transport_config%'
+    client: ~
